--- a/zoo-css-challenge/index.html
+++ b/zoo-css-challenge/index.html
@@ -31,7 +31,7 @@
 
 		<section class="bears">
 			<h2>Bears</h2>
-			<p>Did you know that a bear's closest relative is the seal? Or that bears can smell over 2,000 times better than humans?</p>
+			<p id="pp2">Did you know that a bear's closest relative is the seal? Or that bears can smell over 2,000 times better than humans?</p>
 			<div class="image-container">
 				<img
 					src="https://placebear.com/200/300"
