--- a/zoo-css-challenge/index.html
+++ b/zoo-css-challenge/index.html
@@ -55,8 +55,7 @@
 		</section>
 
 		<section class="tigers">
-			<h2>Tiger</h2>
-			<h3>Tiger Facts</h3>
+			<h2>Tiger Facts</h2>
 			<ul>
 				<li>Tigers are the largest cat species in the world reaching up to 3.3 meters in length and weighing up to 670 pounds!
 				<li>Tigers are easily recognizable with their dark vertical stripes and reddish/orange fur.
@@ -69,7 +68,7 @@
 		<section class="giraffe">
 			<h2>Giraffe</h2>
 
-			<p>Giraffes are the world's tallest mammals, thanks to their towering legs and long necks. A giraffe's legs alone are taller than many humans—about 6 feet . These long legs allow giraffes to run as fast as 35 miles an hour over short distances and cruise comfortably at 10 miles an hour over longer distances.</p>
+			<p id="ppg">Giraffes are the world's tallest mammals, thanks to their towering legs and long necks. A giraffe's legs alone are taller than many humans—about 6 feet . These long legs allow giraffes to run as fast as 35 miles an hour over short distances and cruise comfortably at 10 miles an hour over longer distances.</p>
 
 			<h3>Behavior</h3>
 
