--- a/zoo-css-challenge/index.html
+++ b/zoo-css-challenge/index.html
@@ -82,7 +82,7 @@
 		</section>
 
 		<section class="news">
-			<h2>News</h2>
+			<h2> <center> News </center></h2>
 			<div class="card">
 				<time>2010-04-16</time>
 				<h4>Helping wild turtles in Seychelles</h4>
@@ -93,8 +93,12 @@
 				<h4>Learning about the rainforest</h4>
 				<a>Find out More</a>
 			</div>
+			<div class="card">
+				<time>2021-01-30</time>
+				<h4>Which big cat are you?</h4>
+				<a>Find out More</a>
+			</div>
 		</section>
-
 		<section class="education">
 			<div class="education-container">
 				<h3>Learning resources for schools</h3>
