cambio de transition

--- a/zoo-css-challenge/index.html
+++ b/zoo-css-challenge/index.html
@@ -114,7 +114,7 @@
 		</section>
 
 		<section class="programs">
-			<h2>Programs</h2>
+			<h2><center>Programs</center></h2>
 			<div class="card">
 				<h4>Children and Family Programs</h4>
 				<a>Find out More</a>
