modificacion final pre pulir detalles

--- a/zoo-css-challenge/index.html
+++ b/zoo-css-challenge/index.html
@@ -81,7 +81,15 @@
 			<p>Giraffes use their height to good advantage and browse on leaves and buds in treetops that few other animals can reach (acacias are a favorite). Even the giraffe's tongue is long! The 21-inch tongue helps them pluck tasty morsels from branches. Giraffes eat most of the time and, like cows, regurgitate food and chew it as cud. A giraffe eats hundreds of pounds of leaves each week and must travel miles to find enough food.</p>
 		</section>
 
-		<section class="news">
+		<section class="owl">
+			<h2>Owl</h2>
+			<p id="ppb">Lonely souls. loving souls. They can be seen in their natural habitat on nocturnal walks specailes for this and other birds here in the zoo!
+			</p>
+			<img id='Owl' src='https://estaticos.muyinteresante.es/media/cache/1140x_thumb/uploads/images/gallery/5d137e105cafe826be509e41/buho0.jpg'>
+			
+		</section>	
+			
+		class="news">
 			<h2> <center> News </center></h2>
 			<div class="card">
 				<time>2010-04-16</time>
